[package]
name = "cactuswar-client"
version = "0.1.0"
authors = ["Aspect="]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.47"
wasm-bindgen = "0.2.70"
num-traits = "0.2"
num-derive = "0.2"
console_error_panic_hook = "0.1.6"
humantime = "2.1.0"
[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'Node',
  'MouseEvent',
  'EventTarget',
  'CanvasGradient',
  'TouchEvent',
  'TouchList',
  'Touch',
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  "BinaryType",
  "KeyboardEvent",
  "TextMetrics",
  "HtmlInputElement",
  "HtmlDivElement",
  "CssStyleDeclaration",
  "Performance"
]
